--- a/pages/docs/manual/v9.0.0/newcomer-examples.mdx
+++ b/pages/docs/manual/v9.0.0/newcomer-examples.mdx
@@ -195,7 +195,7 @@ function addTodo(state, todo) {
 
 </CodeTab>
 
-## Modeling actions
+### Modeling actions
 
 For smaller reducers (reducers with only a few sub-functions), you can use a variant for your action type. You can use a `switch` statement to pattern match on the different action types. Here's an example of a reducer for a simple counter:
 
